[package]
name = "dock-tape"
version = "0.1.0"
authors = ["gokayokyay <gokayokyay@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
futures = "0.3.5"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }